--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ Library/assetDatabase3
 Library/expandedItems
 *.dll
 *.mdb
+Library/metadata/00/00000000000000004000000000000000
+Library/CurrentLayout.dwlt
